[workspace]
members = ["crates/*"]

[package]
name = "maidenx"
version = "0.0.4"
description = "CUDA implementation for Maiden Engine"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"
documentation = "https://docs.rs/maidenx"
readme = "README.md"
keywords = ["cuda", "gpu", "maiden"]
categories = ["science", "development-tools"]

[dependencies]
maidenx_internal = { path = "crates/maidenx_internal", version = "0.0.4" }

[[example]]
name = "device_benchmark"
path = "examples/device/device_benchmark.rs"

[[example]]
name = "tensor_basic"
path = "examples/tensor/tensor_basic.rs"

[[example]]
name = "tensor_matmul"
path = "examples/tensor/tensor_matmul.rs"

[[example]]
name = "module_builder"
path = "examples/nn/module_builder.rs"

[[example]]
name = "nn_linear"
path = "examples/nn/nn_linear.rs"
