[workspace]
members = ["crates/*"]

[package]
name = "maidenx"
version = "0.0.6-dev"
description = "Rust ML Framework for Maiden Engine"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"
documentation = "https://docs.rs/maidenx"
readme = "README.md"
keywords = ["cuda", "gpu", "maiden"]
categories = ["science", "development-tools"]

[features]
full = ["maidenx_internal/full"]
cuda = ["maidenx_internal/cuda"]

[dependencies]
maidenx_internal = { path = "crates/maidenx_internal", version = "0.0.6-dev" }

[[example]]
name = "device-guard"
path = "examples/device/device-guard.rs"

[[example]]
name = "device-cpu"
path = "examples/device/device-cpu.rs"

[[example]]
name = "device-cuda"
path = "examples/device/device-cuda.rs"

[[example]]
name = "grad-auto"
path = "examples/grad/grad-auto.rs"

[[example]]
name = "grad-nonauto"
path = "examples/grad/grad-nonauto.rs"

[[example]]
name = "tensor-basic"
path = "examples/tensor/tensor-basic.rs"

[[example]]
name = "tensor-mat_mul"
path = "examples/tensor/tensor-mat_mul.rs"

[[example]]
name = "module-builder"
path = "examples/nn/module-builder.rs"

[[example]]
name = "nn-linear"
path = "examples/nn/nn-linear.rs"
