[package]
name = "maiden_nn"
version = "0.0.2"
description = "Maiden NN"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"

[dependencies]
maiden_nn_macros = { path = "macros", version = "0.0.2" }

maiden_cuda-core = { path = "../cuda-core", version = "0.0.2" }
maiden_cuda-kernels = { path = "../cuda-kernels", version = "0.0.2" }
maiden_tensor = { path = "../maiden_tensor", version = "0.0.2" }
