[package]
name = "maiden_tensor"
version = "0.0.2"
description = "Maiden Tensor"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"

[dependencies]
maiden_cuda-core = { path = "../cuda-core", version = "0.0.2" }
maiden_cuda-kernels = { path = "../cuda-kernels", version = "0.0.2" }

rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
