[package]
name = "maidenx_core"
version = "0.0.4"
description = "MaidenX Core"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[dependencies]
maidenx_cpu_core = { path = "../maidenx_cpu_core", version = "0.0.4" }
maidenx_cuda_core = { path = "../maidenx_cuda_core", version = "0.0.4" }
