[package]
name = "maidenx_core"
version = "0.0.5-dev"
description = "MaidenX Core"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
cuda = ["maidenx_cuda_core"]

[dependencies]
maidenx_cpu_core = { path = "../maidenx_cpu_core", version = "0.0.5-dev" }
maidenx_cuda_core = { path = "../maidenx_cuda_core", version = "0.0.5-dev", optional = true }

log = { version = "0.4.22" }
