[package]
name = "maidenx_cuda_core"
version = "0.0.4"
description = "MaidenX CUDA Core"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[dependencies]
maidenx_cuda_sys = { path = "../maidenx_cuda_sys", version = "0.0.4" }
