[package]
name = "maidenx_internal"
version = "0.0.6-dev"
description = "MaidenX Internal"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[features]
full = ["cuda"]
cuda = ["maidenx_core/cuda", "maidenx_nn/cuda", "maidenx_tensor/cuda"]

[dependencies]
maidenx_core = { path = "../maidenx_core", version = "0.0.6-dev" }
maidenx_math = { path = "../maidenx_math", version = "0.0.6-dev" }
maidenx_nn = { path = "../maidenx_nn", version = "0.0.6-dev" }
maidenx_tensor = { path = "../maidenx_tensor", version = "0.0.6-dev" }
