[package]
name = "maidenx_nn"
version = "0.0.3"
description = "MaidenX NN"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[dependencies]
maidenx_nn_macros = { path = "macros", version = "0.0.3" }

maidenx_cuda_core = { path = "../maidenx_cuda_core", version = "0.0.3" }
maidenx_cuda_kernels = { path = "../maidenx_cuda_kernels", version = "0.0.3" }
maidenx_tensor = { path = "../maidenx_tensor", version = "0.0.3" }
