[package]
name = "maidenx_tensor"
version = "0.0.3-dev"
description = "MaidenX Tensor"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[dependencies]
maidenx_cuda_core = { path = "../maidenx_cuda_core", version = "0.0.3-dev" }
maidenx_cuda_kernels = { path = "../maidenx_cuda_kernels", version = "0.0.3-dev" }

rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
