[package]
name = "maidenx_tensor"
version = "0.0.4"
description = "MaidenX Tensor"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/maidenx"

[dependencies]
maidenx_core = { path = "../maidenx_core", version = "0.0.4" }
maidenx_cpu_core = { path = "../maidenx_cpu_core", version = "0.0.4" }
maidenx_cuda_core = { path = "../maidenx_cuda_core", version = "0.0.4" }
maidenx_cuda_kernels = { path = "../maidenx_cuda_kernels", version = "0.0.4" }

rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
