[package]
name = "maiden_nn_macros"
version = "0.0.2"
description = "Maiden NN Macros"
license = "MIT OR Apache-2.0"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
maiden_macro_utils = { path = "../../maiden_macro_utils", version = "0.0.2" }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
